# annotation_tool

./: .gitignore  README.md  requirements.txt  setup.cfg
src/annotation_tool/: __init__.py  _utils.py  annotation_tool.py
src/annotation_tool/icons/: attribution.txt
