[metadata]
name = annotation_tool
version = 0.0.1
author = Ruben T Lucassen
author_email = r.t.lucassen@umcutrecht.nl
description = Image annotation tool
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
url = https://github.com/RTLucassen/annotation_tool
classifiers = 
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
install_requires =
    matplotlib >= 3.5
    numpy >= 1.22
    Pillow >= 9.1.1
    scikit-image >= 0.19 
    SimpleITK >= 2.2.0
    sv-ttk >= 2.0
    tk >= 0.1.0
    pyglet >= 2.0

[options.package_data]
* = *.png, *.ttf, *.txt

